@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba Panopticon 1.1.2
 ================================================================================
+~ Long PHP version is now truncated in Dashboard view
 # [MEDIUM] The SSL/TLS expiration task would fail on MariaDB [gh-562]
 # [LOW] The default .htaccess causes the ACE Editor to throw a JavaScript console warning [gh-561]
 
